# My-Web-Site

./: .gitignore  Procfile  README.md  app.py  pyproject.toml
static/: styles.css
templates/: base.html  index.html
